# anchore_engine/services/apiext/api/controllers/events.py
@@ -1,0 +1,94 @@
+import copy
+import json
+import datetime
+
+from anchore_engine.clients import catalog
+from anchore_engine.subsys import logger
+from flask import request
+
+import anchore_engine.services.common
+
+
+def list_events(source_service=None, source_host_id=None, resource_type=None, level=None, since=None, before=None, next=None):
+    request_inputs = anchore_engine.services.common.do_request_prep(request, default_params={})
+    user_auth = request_inputs['auth']
+    method = request_inputs['method']
+    bodycontent = request_inputs['bodycontent']
+    params = request_inputs['params']
+
+    return_object = {}
+    httpcode = 500
+    userId, pw = user_auth
+
+    try:
+        return_object = catalog.get_events(user_auth, source_service=source_service, source_host_id=source_host_id,
+                                           resource_type=resource_type, level=level, since=since, before=before, next=next)
+        httpcode = 200
+    except Exception as err:
+        return_object = anchore_engine.services.common.make_response_error(err, in_httpcode=httpcode)
+        httpcode = return_object['httpcode']
+
+    return (return_object, httpcode)
+
+
+def delete_events(before=None, since=None):
+    request_inputs = anchore_engine.services.common.do_request_prep(request, default_params={})
+    user_auth = request_inputs['auth']
+    method = request_inputs['method']
+    bodycontent = request_inputs['bodycontent']
+    params = request_inputs['params']
+
+    return_object = {}
+    httpcode = 500
+    userId, pw = user_auth
+
+    try:
+        return_object = catalog.delete_events(user_auth, since=since, before=before)
+        httpcode = 200
+    except Exception as err:
+        return_object = anchore_engine.services.common.make_response_error(err, in_httpcode=httpcode)
+        httpcode = return_object['httpcode']
+
+    return (return_object, httpcode)
+
+
+def get_event(eventId):
+    request_inputs = anchore_engine.services.common.do_request_prep(request, default_params={})
+    user_auth = request_inputs['auth']
+    method = request_inputs['method']
+    bodycontent = request_inputs['bodycontent']
+    params = request_inputs['params']
+
+    return_object = {}
+    httpcode = 500
+    userId, pw = user_auth
+
+    try:
+        return_object = catalog.get_event(user_auth, eventId)
+        httpcode = 200
+    except Exception as err:
+        return_object = anchore_engine.services.common.make_response_error(err, in_httpcode=httpcode)
+        httpcode = return_object['httpcode']
+
+    return (return_object, httpcode)
+
+
+def delete_event(eventId):
+    request_inputs = anchore_engine.services.common.do_request_prep(request, default_params={})
+    user_auth = request_inputs['auth']
+    method = request_inputs['method']
+    bodycontent = request_inputs['bodycontent']
+    params = request_inputs['params']
+
+    return_object = {}
+    httpcode = 500
+    userId, pw = user_auth
+
+    try:
+        return_object = catalog.delete_event(user_auth, eventId)
+        httpcode = 200
+    except Exception as err:
+        return_object = anchore_engine.services.common.make_response_error(err, in_httpcode=httpcode)
+        httpcode = return_object['httpcode']
+
+    return (return_object, httpcode)
